--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,8 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+monitor_filters = time
 lib_deps = 
 	makuna/RTC@^2.3.6
+	https://github.com/prampec/GsmAsync.git
+	adafruit/SD@0.0.0-alpha+sha.041f788250
